Modified images to png

--- a/index.html
+++ b/index.html
@@ -103,14 +103,14 @@
         <div class="row">
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Azure Solution Architect Expert.pdf" alt="Azure" style="width:100%">
+                    <img src="images/Azure Solution Architect Expert.png" alt="Azure" style="width:100%">
                     <h4>Azure Solution Architect Expert</h4>
                     <p>Azure Cloud</p>
                 </div>
             </div>
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Azure Devops Engineer Expert.pdf" alt="Azure" style="width:100%">
+                    <img src="images/Azure Devops Engineer Expert.png" alt="Azure" style="width:100%">
                     <h4>Azure Devops Engineer Expert</h4>
                     <p>Azure Cloud</p>
                 </div>
@@ -118,7 +118,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Azure Security Enginner Associate.pdf" alt="Azure" style="width:100%">
+                    <img src="images/Azure Security Enginner Associate.png" alt="Azure" style="width:100%">
                     <h4>Azure Security Enginner Associate</h4>
                     <p>Azure Cloud</p>
                 </div>
@@ -126,7 +126,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Azure Data Fundamentals.pdf" alt="Azure" style="width:100%">
+                    <img src="images/Azure Data Fundamentals.png" alt="Azure" style="width:100%">
                     <h4>Azure Data Fundamentals</h4>
                     <p>Azure Cloud</p>
                 </div>
@@ -134,7 +134,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Azure AI Fundamentals.pdf" alt="Azure" style="width:100%">
+                    <img src="images/Azure AI Fundamentals.png" alt="Azure" style="width:100%">
                     <h4>Azure AI Fundamentals</h4>
                     <p>Azure Cloud</p>
                 </div>
@@ -142,7 +142,7 @@
 			
 			<div class="column nature">
                 <div class="content">
-                    <img src="images/Microsoft Azure Administrator Associate.pdf" alt="Azure" style="width:100%">
+                    <img src="images/Microsoft Azure Administrator Associate.png" alt="Azure" style="width:100%">
                     <h4>Microsoft Azure Administrator Associate</h4>
                     <p>Azure Cloud</p>
                 </div>
@@ -174,7 +174,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/MCT 2020-2021.pdf" alt="Azure" style="width:100%">
+                    <img src="images/MCT 2020-2021.png" alt="Azure" style="width:100%">
                     <h4>Microsoft Certified Trainer 2020-2021</h4>
                     <p>MCT</p>
                 </div>
@@ -182,7 +182,7 @@
 			
 			<div class="column nature">
                 <div class="content">
-                    <img src="images/MCP.pdf" alt="Microsoft" style="width:100%">
+                    <img src="images/MCP.png" alt="Microsoft" style="width:100%">
                     <h4>Microsoft Certified Professional</h4>
                     <p>Microsoft</p>
                 </div>
@@ -190,7 +190,7 @@
 			
 			<div class="column nature">
                 <div class="content">
-                    <img src="images/WCF - MCTS.pdf" alt="Microsoft" style="width:100%">
+                    <img src="images/WCF - MCTS.png" alt="Microsoft" style="width:100%">
                     <h4>MCTS : Windows Communication Service</h4>
                     <p>Microsoft</p>
                 </div>
@@ -198,7 +198,7 @@
 			
 			<div class="column nature">
                 <div class="content">
-                    <img src="images/.NET Framework - MCTS.pdf" alt="Microsoft" style="width:100%">
+                    <img src="images/.NET Framework - MCTS.png" alt="Microsoft" style="width:100%">
                     <h4>MCTS : Windows Application</h4>
                     <p>Microsoft</p>
                 </div>
@@ -206,7 +206,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/CJE.pdf" alt="Jenkins" style="width:100%">
+                    <img src="images/CJE.png" alt="Jenkins" style="width:100%">
                     <h4>Certified Jenkins Engineer</h4>
                     <p>Jenkins</p>
                 </div>
@@ -214,7 +214,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Terraform Associate.pdf" alt="Terraform" style="width:100%">
+                    <img src="images/Terraform Associate.png" alt="Terraform" style="width:100%">
                     <h4>HashiCorp Certified Terraform Associate</h4>
                     <p>Terraform</p>
                 </div>
@@ -222,7 +222,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Chaos Engineer.pdf" alt="Chaos" style="width:100%">
+                    <img src="images/Chaos Engineer.png" alt="Chaos" style="width:100%">
                     <h4>Certified Chaos Engineering Practitioner</h4>
                     <p>Choas</p>
                 </div>
@@ -246,7 +246,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Devops Leader.pdf" alt="DevOps Institute™" style="width:100%">
+                    <img src="images/Devops Leader.png" alt="DevOps Institute™" style="width:100%">
                     <h4>DevOps Leader (DOL)® Certification</h4>
                     <p>DevOps Institute™</p>
                 </div>
@@ -254,7 +254,7 @@
 
             <div class="column cars">
                 <div class="content">
-                    <img src="images/nutanix-nca.pdf" alt="Nutanix" style="width:100%">
+                    <img src="images/nutanix-nca.png" alt="Nutanix" style="width:100%">
                     <h4>Nutanix Certified Associate</h4>
                     <p>Nutanix</p>
                 </div>
@@ -262,7 +262,7 @@
 
             <div class="column cars">
                 <div class="content">
-                    <img src="images/jumpcloud.pdf" alt="JumpCloud" style="width:100%">
+                    <img src="images/jumpcloud.png" alt="JumpCloud" style="width:100%">
                     <h4>JumpCloud Core Certification</h4>
                     <p>JumpCloud</p>
                 </div>
@@ -270,7 +270,7 @@
 
             <div class="column people">
                 <div class="content">
-                    <img src="images/Apache-cassandra.pdf" alt="DataStax" style="width:100%">
+                    <img src="images/Apache-cassandra.png" alt="DataStax" style="width:100%">
                     <h4>Apache Cassandra Administrator Associate</h4>
                     <p>DataStax</p>
                 </div>
@@ -278,7 +278,7 @@
 			
 			<div class="column nature">
                 <div class="content">
-                    <img src="images/Docker Essentials-1.pdf" alt="IBM" style="width:100%">
+                    <img src="images/Docker Essentials-1.png" alt="IBM" style="width:100%">
                     <h4>Docker Essentials: A Developer Introduction</h4>
                     <p>IBM CLoud</p>
                 </div>
@@ -286,7 +286,7 @@
 			
 			<div class="column nature">
                 <div class="content">
-                    <img src="images/Containers & Kubernetes Essentials.pdf" alt="IBM" style="width:100%">
+                    <img src="images/Containers & Kubernetes Essentials.png" alt="IBM" style="width:100%">
                     <h4>Containers & Kubernetes Essentials</h4>
                     <p>IBM CLoud</p>
                 </div>
@@ -294,7 +294,7 @@
 
             <div class="column nature">
                 <div class="content">
-                    <img src="images/Aviatrix MCNA Associate-1.pdf" alt="Aviatrix" style="width:100%">
+                    <img src="images/Aviatrix MCNA Associate-1.png" alt="Aviatrix" style="width:100%">
                     <h4>Aviatrix Certified Engineer – Multi-Cloud Network Associate</h4>
                     <p>Aviatrix</p>
                 </div>
