Added missing files

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 			
 			<div class="column nature">
                 <div class="content">
-                    <img src="images/.NET Framework - MCTS.png" alt="Microsoft" style="width:100%">
+                    <img src="images/Dot NET Framework - MCTS.png" alt="Microsoft" style="width:100%">
                     <h4>MCTS : Windows Application</h4>
                     <p>Microsoft</p>
                 </div>
