Added Comptia Fundamentals Cert

--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@
                     <p>Aviatrix</p>
                 </div>
             </div>
+			
+			<div class="column nature">
+                <div class="content">
+                    <img src="images/CompTIA ITF+.png" alt="Comptia" style="width:100%">
+                    <h4>CompTIA ITF+</h4>
+                    <p>CompTIA</p>
+                </div>
+            </div> 
 
             <div class="column nature">
                 <div class="content">
@@ -315,9 +323,7 @@
                     <h4>Cyber Security Foundation</h4>
                     <p>CertiProf</p>
                 </div>
-            </div>         
-
- 
+            </div>
 
             <!-- END GRID -->
         </div>
